implement usb fast charge mode

--- a/arch/arm64/configs/rosy_defconfig
+++ b/arch/arm64/configs/rosy_defconfig
@@ -766,3 +766,14 @@ CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SYSVIPC=n 
 CONFIG_USELIB=n
 CONFIG_ARM64=y
+
+#
+# CUSTOM GOVERNOR
+#
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_DESPAIR=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_LIONFISH=y
