rosy: Import rosy changes in franco

--- a/arch/arm64/configs/franco_rosy_defconfig
+++ b/arch/arm64/configs/franco_rosy_defconfig
@@ -324,8 +324,6 @@ CONFIG_ARCH_MSM=y
 # CONFIG_ARCH_MSM8917 is not set
 # CONFIG_ARCH_MSM8920 is not set
 # CONFIG_ARCH_MSM8940 is not set
-CONFIG_ARCH_MSM8953=y
-CONFIG_ARCH_SDM450=y
 # CONFIG_ARCH_MSM8937 is not set
 # CONFIG_ARCH_MSM8996 is not set
 # CONFIG_ARCH_MSMCOBALT is not set
@@ -1640,14 +1638,12 @@ CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
 # CONFIG_JOYSTICK_XPAD_FF is not set
 # CONFIG_JOYSTICK_XPAD_LEDS is not set
-CONFIG_INPUT_TABLET=y
 # CONFIG_TABLET_USB_ACECAD is not set
 # CONFIG_TABLET_USB_AIPTEK is not set
 # CONFIG_TABLET_USB_GTCO is not set
 # CONFIG_TABLET_USB_HANWANG is not set
 # CONFIG_TABLET_USB_KBTAB is not set
 # CONFIG_TABLET_SERIAL_WACOM4 is not set
-CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v21=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v21 is not set
@@ -1663,7 +1659,6 @@ CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_AD7877 is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
 # CONFIG_TOUCHSCREEN_AR1021_I2C is not set
-# CONFIG_TOUCHSCREEN_ATMEL_MXT is not set
 # CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH_TS is not set
 # CONFIG_TOUCHSCREEN_AUO_PIXCIR is not set
 # CONFIG_TOUCHSCREEN_BU21013 is not set
@@ -1704,16 +1699,11 @@ CONFIG_TOUCHSCREEN_IST3038C=y
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
 # CONFIG_SECURE_TOUCH is not set
 # CONFIG_TOUCHSCREEN_IT7260_I2C is not set
-# CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
-# CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
-CONFIG_TOUCHSCREEN_GT9XX_MIDO=y
-# CONFIG_TOUCHSCREEN_MAXIM_STI is not set
-# CONFIG_TOUCHSCREEN_FTS is not set
+CONFIG_TOUCHSCREEN_GT9XX_MIDO is not set
 # CONFIG_TOUCHSCREEN_TD4310 is not set
 # CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
-CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
 CONFIG_INPUT_HBTP_INPUT=y
@@ -1733,7 +1723,6 @@ CONFIG_INPUT_KEYCHORD=y
 # CONFIG_INPUT_YEALINK is not set
 # CONFIG_INPUT_CM109 is not set
 CONFIG_INPUT_UINPUT=y
-CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_PCF8574 is not set
 # CONFIG_INPUT_PWM_BEEPER is not set
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
@@ -1746,9 +1735,9 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_PIXART_OTS_PAT9125_SWITCH is not set
 # CONFIG_SENSORS_LTR553 is not set
 # CONFIG_SENSORS_BMA2X2 is not set
-CONFIG_INPUT_FINGERPRINT=y
-CONFIG_FINGERPRINT_GOODIX_GF3208_MIDO=y
-CONFIG_FINGERPRINT_FPC1020_MIDO=y
+CONFIG_INPUT_FINGERPRINT is not set
+CONFIG_FINGERPRINT_GOODIX_GF3208_MIDO is not set
+CONFIG_FINGERPRINT_FPC1020_MIDO is not set
 # CONFIG_FINGERPRINT_GOODIX_GF3208_TISSOT is not set
 # CONFIG_FINGERPRINT_FPC1020_TISSOT is not set
 
@@ -3285,7 +3274,6 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_LM3530 is not set
 # CONFIG_LEDS_LM3642 is not set
 # CONFIG_LEDS_PCA9532 is not set
-CONFIG_LEDS_GPIO=y
 # CONFIG_LEDS_LP3944 is not set
 # CONFIG_LEDS_LP5521 is not set
 # CONFIG_LEDS_LP5523 is not set
@@ -3311,7 +3299,6 @@ CONFIG_LEDS_QPNP=y
 CONFIG_LEDS_QPNP_FLASH=y
 CONFIG_LEDS_QPNP_WLED=y
 # CONFIG_LEDS_MSM_GPIO_FLASH is not set
-CONFIG_LEDS_AW2013=y
 
 #
 # LED Triggers
@@ -3563,7 +3550,7 @@ CONFIG_MACH_XIAOMI_MSM8953=y
 #
 # Xiaomi board selection
 #
-CONFIG_MACH_XIAOMI_MIDO=y
+CONFIG_MACH_XIAOMI_MIDO is not set
 # CONFIG_MACH_XIAOMI_TISSOT is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
@@ -4434,6 +4421,28 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
+
+#
+# Rosy Specific Changes
+#
+CONFIG_INPUT_TABLET=y
+CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_FTS=y
+CONFIG_TOUCHSCREEN_FT8006M=y
+CONFIG_TOUCHSCREEN_ATMEL_MXT=y
+CONFIG_TOUCHSCREEN_GEN_VKEYS=y
+CONFIG_TOUCHSCREEN_FT5X06=y
+CONFIG_TOUCHSCREEN_MAXIM_STI=y
+CONFIG_INPUT_MISC=y
+CONFIG_INPUT_GPIO=y
+CONFIG_FINGERPRINT_ROSY=y
+CONFIG_FINGERPRINT_GOODIX_GF3208_ROSY=y
+CONFIG_FINGERPRINT_FPC1020_ROSY=y
+CONFIG_LEDS_GPIO=y
+CONFIG_LEDS_AW2013=y
+CONFIG_D1_ROSY=y
+CONFIG_ARCH_MSM8953=y
+CONFIG_ARCH_SDM450=y
 
 #
 # Qualcomm Atheros Prima WLAN module
