--- a/arch/arm/boot/dts/qcom/rosy/msm8953_rosy.dtsi
+++ b/arch/arm/boot/dts/qcom/rosy/msm8953_rosy.dtsi
@@ -11,7 +11,7 @@
  * GNU General Public License for more details.
  */
 
-#include "skeleton64.dtsi"
+#include "qcom/skeleton64.dtsi"
 #include <dt-bindings/clock/msm-clocks-8953.h>
 #include <dt-bindings/regulator/qcom,rpm-smd-regulator.h>
 #include <dt-bindings/gpio/gpio.h>
@@ -129,17 +129,17 @@
 
 };
 
-#include "msm8953-pinctrl.dtsi"
-#include "msm8953-cpu.dtsi"
-#include "msm8953-gpu.dtsi"
-#include "msm8953-ion.dtsi"
-#include "msm8953-smp2p.dtsi"
-#include "msm-arm-smmu-8953.dtsi"
-#include "msm8953-coresight.dtsi"
-#include "msm8953-bus.dtsi"
-#include "msm8953-iommu-domains.dtsi"
-#include "msm8953-vidc.dtsi"
-#include "msm8953-pm.dtsi"
+#include "qcom/msm8953-pinctrl.dtsi"
+#include "qcom/msm8953-cpu.dtsi"
+#include "qcom/msm8953-gpu.dtsi"
+#include "qcom/msm8953-ion.dtsi"
+#include "qcom/msm8953-smp2p.dtsi"
+#include "qcom/msm-arm-smmu-8953.dtsi"
+#include "qcom/msm8953-coresight.dtsi"
+#include "qcom/msm8953-bus.dtsi"
+#include "qcom/msm8953-iommu-domains.dtsi"
+#include "qcom/msm8953-vidc.dtsi"
+#include "qcom/msm8953-pm.dtsi"
 
 &soc {
 	#address-cells = <1>;
@@ -2374,16 +2374,16 @@
 	};
 };
 
-#include "msm-pm8953-rpm-regulator.dtsi"
-#include "msm-pm8953.dtsi"
-#include "msm8953-regulator.dtsi"
-#include "msm-pmi8940.dtsi"
-#include "msm-audio.dtsi"
+#include "qcom/msm-pm8953-rpm-regulator.dtsi"
+#include "qcom/msm-pm8953.dtsi"
+#include "qcom/msm8953-regulator.dtsi"
+#include "qcom/msm-pmi8940.dtsi"
+#include "qcom/msm-audio.dtsi"
 #include "msm8953-audio_rosy.dtsi"
-#include "msm-gdsc-8916.dtsi"
-#include "msm8953-camera.dtsi"
-#include "msm8953-mdss.dtsi"
-#include "msm8953-mdss-pll.dtsi"
+#include "qcom/msm-gdsc-8916.dtsi"
+#include "qcom/msm8953-camera.dtsi"
+#include "qcom/msm8953-mdss.dtsi"
+#include "qcom/msm8953-mdss-pll.dtsi"
 
 &gdsc_venus {
 	clock-names = "bus_clk", "core_clk";
