ARM64:rosy_defconfig: Fix Treble compatibility

--- a/arch/arm64/configs/franco_rosy_defconfig
+++ b/arch/arm64/configs/franco_rosy_defconfig
@@ -2,7 +2,6 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 3.18.132 Kernel Configuration
 #
-CONFIG_ARM64=y
 CONFIG_64BIT=y
 CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
 CONFIG_MMU=y
@@ -45,11 +44,8 @@ CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION="-FrancoKernel"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-# CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
-# CONFIG_FHANDLE is not set
-# CONFIG_USELIB is not set
 CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 CONFIG_AUDITSYSCALL=y
 CONFIG_AUDIT_WATCH=y
@@ -515,7 +511,6 @@ CONFIG_NET_UDP_TUNNEL=y
 CONFIG_INET_XFRM_TUNNEL=y
 CONFIG_INET_TUNNEL=y
 CONFIG_INET_XFRM_MODE_TRANSPORT=y
-CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
@@ -585,7 +580,6 @@ CONFIG_NF_CONNTRACK_BROADCAST=y
 # CONFIG_NF_CONNTRACK_SIP is not set
 # CONFIG_NF_CT_NETLINK_TIMEOUT is not set
 # CONFIG_NETFILTER_NETLINK_QUEUE_CT is not set
-CONFIG_NF_NAT=y
 CONFIG_NF_NAT_NEEDED=y
 CONFIG_NF_NAT_PROTO_DCCP=y
 CONFIG_NF_NAT_PROTO_UDPLITE=y
@@ -3334,8 +3328,6 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 # CONFIG_EFIVAR_FS is not set
-# CONFIG_NFS_FS is not set
-# CONFIG_NFSD is not set
 # CONFIG_CEPH_FS is not set
 # CONFIG_CIFS_STATS is not set
 # CONFIG_CIFS_WEAK_PW_HASH is not set
@@ -3580,7 +3572,6 @@ CONFIG_KEYS_COMPAT=y
 #
 # CONFIG_PFK is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
-CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
 CONFIG_SECURITY_NETWORK=y
@@ -3589,7 +3580,6 @@ CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 CONFIG_HAVE_ARCH_HARDENED_USERCOPY=y
-CONFIG_HARDENED_USERCOPY=y
 # CONFIG_HARDENED_USERCOPY_PAGESPAN is not set
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
@@ -3607,7 +3597,6 @@ CONFIG_INTEGRITY=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
 
@@ -4521,3 +4510,19 @@ CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_F2FS_IO_TRACE is not set
 # CONFIG_F2FS_FAULT_INJECTION is not set
+
+#
+# Treble Compatibility
+#
+CONFIG_DEFAULT_SECURITY_SELINUX=y
+CONFIG_FHANDLE=n 
+CONFIG_HARDENED_USERCOPY=y
+CONFIG_INET_XFRM_MODE_TUNNEL=y 
+CONFIG_NFSD=n
+CONFIG_NFS_FS=n 
+CONFIG_NF_NAT=y
+CONFIG_OABI_COMPAT=n 
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
+CONFIG_SYSVIPC=n 
+CONFIG_USELIB=n
+CONFIG_ARM64=y
