Enabled lzo and lz4 compressors by default

--- a/arch/arm64/configs/franco_rosy_defconfig
+++ b/arch/arm64/configs/franco_rosy_defconfig
@@ -379,7 +379,6 @@ CONFIG_CMA_AREAS=7
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_ZSMALLOC_STAT is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
-CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 # CONFIG_XEN is not set
@@ -916,7 +915,6 @@ CONFIG_OF_BATTERYDATA=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-CONFIG_ZRAM_LZ4_COMPRESS=y
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
@@ -4526,3 +4524,11 @@ CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SYSVIPC=n 
 CONFIG_USELIB=n
 CONFIG_ARM64=y
+
+#
+# Enable lzo/lz4
+#
+CONFIG_BALANCE_ANON_FILE_RECLAIM=y
+CONFIG_ZRAM_LZO_COMPRESS=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
+# CONFIG_ZRAM_DEBUG is not set
