--- a/arch/arm/boot/dts/qcom/rosy/sdm450_rosy.dtsi
+++ b/arch/arm/boot/dts/qcom/rosy/sdm450_rosy.dtsi
@@ -11,7 +11,7 @@
  * GNU General Public License for more details.
  */
 
-#include "skeleton64.dtsi"
+#include "qcom/skeleton64.dtsi"
 #include "msm8953_rosy.dtsi"
 
 / {
