--- a/sound/soc/msm/Kconfig
+++ b/sound/soc/msm/Kconfig
@@ -255,7 +255,13 @@ config SND_SOC_MSM8909
 	 DAI-links.
 
 config SND_SOC_AW87319
-	tristate "Build AWINIC AW87319 ASoc Speaker PA"
+       tristate "Build AWINIC AW87319 ASoc Speaker PA"
+
+config SND_SOC_AW87329
+	tristate "SoC Audio for awinic AW87329 Smart K PA"
+	depends on I2C
+	help
+	This option enables support for AW87329 Smart K PA.
 
 config SND_SOC_MDM9640
 	tristate "SoC Machine driver for MDM9640 boards"
