--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1145,3 +1145,7 @@ endif
 source "lib/Kconfig"
 
 source "arch/arm64/mm/Kconfig"
+
+source "arch/arm64/hotplug/autosmp/Kconfig"
+
+source "arch/arm64/hotplug/alucard/Kconfig"
